# astrbot_plugin_liuli

./: README.md  _conf_schema.json  config.py  main.py  metadata.yaml  pyproject.toml  requirements.txt
config/: database.py
core/: guild_handle.py  register_handle.py  sign_handle.py  user_handle.py
data/config/: config.json  signin.json
models/: User.py
service/: sign_handle.py  signin.py
utils/: user_manager.py
